--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
      padding: 6px;
      min-height: 12px;
    }
+   p {
+      background-color: gray;
+    }
   </style>
 </head>
 <body>
   <main id="main">My ID is "main"!</main>
+ 
   <br />
   <div>
       <input id="button" type="button" value="Click Me!"/>
